--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -8,9 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - run: npm install --global prettier
-      - run: prettier --check "**/*.html"
+
+      - name: Install Prettier
+        run: npm install --global prettier
+
+      - name: Check HTML formatting
+        run: prettier --check "**/*.html"
