--- a/.github/workflows/format-check.yaml
+++ b/.github/workflows/format-check.yaml
@@ -18,5 +18,6 @@ jobs:
       - name: Install Prettier
         run: npm install --global prettier
 
-      - name: Check HTML formatting
-        run: prettier --check "**/*.html"
+      - name: Format HTML with Prettier
+        run: prettier --write "**/*.html"
+
